# leeds-local-database

./: .gitignore  Makefile  README.md  compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
insert_results/: add_candidate_result.py
migrations/: V1.001__create_constituency_table.sql  V1.002__create_ward_table.sql  V1.003__create_parent_party_table.sql  V1.003__create_party_table.sql  V1.004__create_party_table.sql  V1.004__create_results_table.sql  V1.005__create_results_table.sql  V2.001__populate_constituency_table.sql  V2.002__populate_ward_table.sql  V2.003__populate_parent_party_table.sql  V2.003__populate_party_table.sql  V2.004__populate_party_table.sql  V2.005__add_unattached_to_parent_party_table.sql  V2.006__add_unattached_to_party_table.sql  V3.001__populate_results_2018.sql  V3.002__populate_results_2018.sql  V3.002__populate_results_2019.sql  V3.003__populate_results_2021.sql  V3.004__populate_results_2022.sql  V3.005__populate_results_2023.sql  V3.006__populate_results_2024.sql  V3.007__update_stuart_long_party.sql
tests/: conftest.py  test_add_candidate_result.py
